# navigravity

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.agent/rules/: 01-identity.md  02-handshake-discovery.md  05-planning-standard.md  90-documentation.md
.agent/skills/mcp-development/: SKILL.md
.agent/workflows/: cleanup-session.md  plan-and-execute.md  release_check.md
docs/: CHANGELOG.md  README.md  metadata.json
docs/architecture/: api_schema.md  curator_manifesto.md
docs/architecture/blueprints/: universal_bridge_draft.md
docs/overview/: curation_patterns.md  llm_tool_usage.md  project_manifest.md
docs/roadmap/: changelog.md  prioritized_roadmap.md  roadmap.md
docs/roadmap/archive/: v0.1.7_plan.md
docs/roadmap/draft/: mcp_black_box_feedback.md  mcp_client_feedback.md  mcp_server_improvements_plan.md  mcp_v0.1.8_feedback.md  monograph_manifesto.md  smart_favorite_metrics.md
memory-bank/: api_schema.md  changelog.md  curation_patterns.md  llm_tool_usage.md  mcp_architecture.md  project_manifest.md  roadmap.md
src/: navidrome_mcp_server.py  verify_logging_run.py
tests/: conftest.py  test_logging.py  test_missing_music_tools.py  test_mood_integration.py  test_phase2_similarity.py  test_playlist_persistence.py  test_smart_scoring.py  test_sync_ghost.py  test_tools.py  test_v0_1_7_fixes.py  verify_mood_logic.py
tests/manual/: verify_logging.py  verify_mcp_ops.py
